# whisperx-asr-service

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SETUP_GUIDE.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: docker-publish.yml
app/: __init__.py  main.py  openai_compat.py  pipeline.py  queue.py  schemas.py  serve_app.py  serve_deployments.py  version.py
tests/: README.md  stress_test.py  test_hotwords.sh
