[project]
name = "whisperx-asr-service"
version = "0.3.1"
description = "FastAPI service wrapping WhisperX for ASR, alignment, and diarization"
requires-python = ">=3.9, <3.14"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "pydantic==2.5.0",
    "whisperx",
]

[project.optional-dependencies]
gpu = [
    "whisperx[gpu]",
]

[tool.uv.sources]
whisperx = { path = "../whisperX-custom", editable = true }
