[project]
name = "whisperx-asr-service"
version = "0.3.1"
description = "FastAPI service wrapping WhisperX for ASR, alignment, and diarization"
requires-python = ">=3.9, <3.14"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "pydantic==2.5.0",
    "whisperx",
]

[project.optional-dependencies]
cpu = [
    "whisperx[cpu]",
    "torch~=2.8.0",
    "torchaudio~=2.8.0",
]
gpu = [
    "whisperx[gpu]",
    "torch~=2.8.0",
    "torchaudio~=2.8.0",
    "triton>=3.3.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
    ],
]

[tool.uv.sources]
whisperx = { path = "../whisperX-custom", editable = true }
torch = [
  { index = "pytorch-cu130", extra = "gpu" },
  { index = "pytorch-cpu", extra = "cpu" },
]
torchaudio = [
  { index = "pytorch-cu130", extra = "gpu" },
  { index = "pytorch-cpu", extra = "cpu" },
]
triton = [
  { index = "pytorch-cu130", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
